--- a/client/elements.html
+++ b/client/elements.html
@@ -13,18 +13,24 @@
 <link rel=import href=bower_components/app-route/app-location.html>
 <link rel=import href=bower_components/app-route/app-route.html>
 <link rel=import href=bower_components/app-layout/app-layout.html>
+
 <link rel=import href=bower_components/iron-ajax/iron-ajax.html>
 <link rel=import href=bower_components/iron-pages/iron-pages.html>
 <link rel=import href=bower_components/iron-icons/iron-icons.html>
 <link rel=import href=bower_components/iron-image/iron-image.html>
+<link rel=import href=bower_components/iron-collapse/iron-collapse.html>
+
 <link rel=import href=bower_components/prism-element/prism-highlighter.html>
 <link rel=import href=bower_components/marked-element/marked-element.html>
+
 <link rel=import href=bower_components/paper-input/all-imports.html>
 <link rel=import href=bower_components/paper-button/paper-button.html>
 <link rel=import href=bower_components/paper-dialog/paper-dialog.html>
 <link rel=import href=bower_components/paper-item/paper-item.html>
 <link rel=import href=bower_components/paper-icon-button/paper-icon-button.html>
+<link rel=import href=bower_components/paper-slider/paper-slider.html>
 
 <link rel=import href=elements/adebray-cluedo.html>
 <link rel=import href=elements/adebray-dialog.html>
 <link rel=import href=elements/adebray-graphql.html>
+<link rel=import href=elements/adebray-volume.html>
