--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,35 @@
 
 		<script src=bower_components/dat.gui/build/dat.gui.min.js></script>
 
+		<script src="lissajous/src/vendor/bufferLoader.js"></script>
+
+		<script src="lissajous/src/context.js"></script>
+		<script src="lissajous/src/track.core.js"></script>
+		<script src="lissajous/src/track.events.js"></script>
+		<script src="lissajous/src/track.api.js"></script>
+		<script src="lissajous/src/track.oscillator.js"></script>
+		<script src="lissajous/src/track.sampler.js"></script>
+		<script src="lissajous/src/track.envelope.js"></script>
+		<script src="lissajous/src/track.scheduler.js"></script>
+		<script src="lissajous/src/track.sequencer.js"></script>
+		<script src="lissajous/src/track.filter.js"></script>
+		<script src="lissajous/src/track.record.js"></script>
+
+		<script src="lissajous/src/track.effects.delay.js"></script>
+		<script src="lissajous/src/track.effects.chorus.js"></script>
+		<script src="lissajous/src/track.effects.tremolo.js"></script>
+		<script src="lissajous/src/track.effects.filter.js"></script>
+		<script src="lissajous/src/track.effects.reverb.js"></script>
+		<script src="lissajous/src/track.effects.distortion.js"></script>
+
+		<script src="lissajous/src/group.js"></script>
+		<script src="lissajous/src/generators.js"></script>
+
+		<script src="lissajous/src/vendor/tuna.js"></script>
+
+		<script src="lissajous/src/vendor/recorder.js"></script>
+
+
 		<script src=scripts/scene.js></script>
 		<script src=scripts/character.js></script>
 	</head>
@@ -29,7 +58,7 @@
 	<body>
 		<adebray-cluedo></adebray-cluedo>
 		<script type="text/javascript">
-			location = '#scene'
+			location = '#music'
 		</script>
 	</body>
 </html>
