--- a/client/elements/adebray-cluedo.html
+++ b/client/elements/adebray-cluedo.html
@@ -220,42 +220,72 @@
 			let tracks = [
 				{
 					name: 'foot hat',
-					track: new track(window[`fhh6`]).beat(2).vol(0.3)
+					track: new track(window[`fhh6`]).beat(4).vol(0.3)
 				},
 				{
 					name: 'snare1',
-					track: new track(window[`snare-top4`]).beat(1).vol(0.1)
+					track: new track(window[`snare-top4`]).beat(1).vol(0).in(20).beat(
+						1, 1, 1, 3
+					).vol(
+						rf(0, .2), rf(0, .2), rf(0, .2), rf(0, .2)
+					)
 				},
 				{
 					name: 'snare2',
-					track: new track(window[`snare-top25`]).beat(6, 3, 6, 3, 3, 3).vol(0.4)
+					track: new track(window[`snare-top25`]).beat(1).vol(0).in(30).beat(12).vol(0.3).in(60).beat(6, 3, 6, 3, 3, 3)
 				},
-				{
-					name: 'crash',
-					track: new track(window[`crash8`]).beat(16).nl(16).vol(0.3)
-				},
+				// {
+				// 	name: 'crash',
+				// 	track: new track(window[`crash8`]).beat(16).nl(16).vol(0.3)
+				// },
 				{
 					name: 'ride',
-					track: new track(window["ride-mid-in8"]).beat(12).nl(12).vol(0.3)
+					track: new track(window["ride-mid-in8"]).beat(1).vol(0).in(24).beat(21, 3).nl(12).vol(0.3)
+				},
+				{
+					name: 'kick',
+					track: new track(window[`kick20`]).beat(1).vol(0).in(24).beat(8, 16, 8).vol(0.3)
+				},
+				{
+					name: 'bass',
+					track: new track().saw().merge(
+						new track().square()
+					).nl(rf(1.8, 2.2), rf(1.8, 2.2), rf(1.8, 2.2)).notes(
+						66, 73, 81,
+						66, 73, 81,
+						66, 74, 83,
+						66, 74, 83,
+						66, 74, 68, 76, 78, 73
+					).trans(-36).vol(0.4).beat(
+						8, 4, 4,
+						4, 2, 2,
+						8, 4, 4,
+						4, 2, 2,
+						2, 4, 2, 4, 2, 4
+					).lp(33, 0, 1) //.adsr(0, 1, 1, 0)
 				},
 				// {
-				// 	name: 'kick',
-				// 	track: new track(window[`kick20`]).beat(12, 6).vol(0.3)
-				// },
-				// {
-				// 	name: 'bass',
-				// 	track: new track().sine().nl(8, 4, 4).beat(8, 4, 4).notes(
-				// 		66, 73, 81, 66, 73, 81, 66, 74, 83, 66, 74, 83,
-				// 		66, 68, 76, 66, 70, 78,
-				// 	).trans(-36).vol(0.3)
+				// 	name: 'chords',
+				// 	track: new track().sine().nl(1).notes(
+				// 		walk.locrian(66)
+				// 	).vol(0.01).beat(1, 1, 2)
 				// }
 			]
 
-			tracks.forEach( e => {
-				let child = document.createElement('adebray-volume')
-				child.track = e
-				this.$.music.appendChild(child)
-			})
+			// tracks.forEach( e => {
+			// 	let child = document.createElement('adebray-volume')
+			// 	child.track = e
+			// 	this.$.music.appendChild(child)
+			// })
+
+			let bass = tracks.find(e => e.name == 'bass').track
+
+			var gui = new dat.GUI()
+			var controller = gui.add(bass, '_volume').min(0).max(1).step(0.01)
+			controller.onChange( (value) => {
+				bass.vol(value)
+			} )
+
 			// this.set('track', t)
 			// console.log(this.track)
 		},
