--- a/client/elements/adebray-volume.html
+++ b/client/elements/adebray-volume.html
@@ -10,6 +10,7 @@
       }
     </style>
 
+    <paper-item>Volume</paper-item>
     <paper-item>{{track.name}}</paper-item>
     <paper-item>{{track.track._volume}}</paper-item>
 	<paper-slider value={{track.track._volume}} min=0 max=1 step=0.01></paper-slider>
