--- a/client/elements.html
+++ b/client/elements.html
@@ -29,8 +29,12 @@
 <link rel=import href=bower_components/paper-item/paper-item.html>
 <link rel=import href=bower_components/paper-icon-button/paper-icon-button.html>
 <link rel=import href=bower_components/paper-slider/paper-slider.html>
+<link rel=import href=bower_components/paper-spinner/paper-spinner.html>
 
 <link rel=import href=elements/adebray-cluedo.html>
 <link rel=import href=elements/adebray-dialog.html>
 <link rel=import href=elements/adebray-graphql.html>
 <link rel=import href=elements/adebray-volume.html>
+<link rel=import href=elements/adebray-live.html>
+
+<link rel=import href=elements/mdi.html>
