--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
 
 		<script src=scripts/scene.js></script>
 		<script src=scripts/character.js></script>
+		<script src=scripts/music.js></script>
 	</head>
 
 	<body>
